# CppTemplate

./: .gitignore  CMakeLists.txt  README.md  SETUP.md  new_cpp_project.sh
.github/workflows/: main.yml
docs/: Doxyfile
docs/pages/: example.md
docs/theme/: header.html
src/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  testExample.cpp
